<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="account_type">com.salesforce.samples.templateapp.login</string>
	<string name="app_name"><b>Template</b></string>
	<string name="app_package">com.salesforce.samples.templateapp</string>
    <string name="welcome">Welcome %s</string>
	<string name="logout_button">Logout</string>
	<string name="fetch_contacts_button">Fetch Contacts</string>
	<string name="fetch_accounts_button">Fetch Accounts</string>
	<string name="clear_button">Clear</string>
	<string name="case_number">Case Number</string>
	<string name="case_subject">Case Subject</string>
	<string name="case_status">Case Status</string>
	<string name="case_description">Case Description</string>
	<string name="user_name">User Name</string>
	<string name="user_email">User Email</string>
	<string name="switch_user_button">Switch User</string>
	<string name="case_info_title">Case Info</string>
	<string name="user_info_title">User Info</string>
</resources>
