<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/case_number" />

        <TextView android:id="@+id/case_number_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/case_description" />

        <TextView android:id="@+id/case_description_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/user_name" />

        <TextView android:id="@+id/user_name_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>
</LinearLayout>
